--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -65,6 +65,16 @@ html {
   border-radius: 10px;
 }
 
+#loading-screen.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#loading-screen.hidden .loading-text {
+  opacity: 0;
+  visibility: hidden;
+}
+
 :root {
   --dot1-color: #800080; /* Purple */
   --dot2-color: #4b0082; /* Indigo */
