--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
   align-items: center;
   flex-direction: column;
   background-color: black;
+  user-select: none;
 }
 
 #background-shader {
@@ -198,6 +199,32 @@ html {
   font-family: "Fira Code", monospace;
   color: rgba(255, 255, 255, 0.5);
 }
+
+#loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  z-index: 1000;
+}
+
+#loading-screen .loading-text {
+  font-size: 2rem;
+  font-family: "Fira Code", monospace;
+  color: white;
+  transition: color 0.5s ease-in-out;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}=
 
 .acrylic {
   background: rgba(0, 0, 0, 0.3);
